<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list_artist"
            android:icon="@drawable/ic_interpreter_mode_24"
            android:title="@string/artist_list" />
        <item
            android:id="@+id/nav_list_album"
            android:icon="@drawable/baseline_subscriptions_24"
            android:title="@string/albums_list" />
    </group>
</menu>