...

    <string name="add_album">Crear Album</string>
    <string name="add_artist">Crear Artista</string>
    <string name="add_album_tracks">Agregar canción a album</string>
    <string name="add_album_to_artist">Agregar album a artista</string>
    <string name="artist_list">Artistas</string>
    <string name="albums_list">Albumes</string>

    <string name="new_artist_title">Vinilos app crea \n un nuevo Artista</string>
    <string name="new_artist_name">Nombre</string>
    <string name="new_artist_image">Imagen</string>
    <string name="new_artist_birthday">Fecha de nacimiento</string>
    <string name="new_artist_description">Descripción</string>
...
