<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="album_detail" type="com.example.vinyls.model.AlbumDetail"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="#757373"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/album_detail_description" />

        <TextView
            android:id="@+id/album_detail_sogns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/songs"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/album_detail_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:justificationMode="inter_word"
            android:text="@{album_detail.description}"
            android:textColor="@color/black"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:background="#757373"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:background="@xml/circle"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/image_album_detail_desc" />

        <TextView
            android:id="@+id/album_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:text="@{album_detail.name}"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@+id/image_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/album_detail_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text='@{album_detail.genre + " | " + album_detail.recordLabel}'
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@+id/image_view"
            app:layout_constraintTop_toBottomOf="@+id/album_detail_name" />

        <TextView
            android:id="@+id/album_detail_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@{album_detail.releaseDate.substring(0,10)}"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@+id/image_view"
            app:layout_constraintTop_toBottomOf="@+id/album_detail_details" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/album_detail_sogns" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>