...
        android:layout_marginTop="100dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/frame_track_separator_1"
        >

        <EditText
            android:id="@+id/new_track_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/new_album_name"
            android:autofillHints="@string/new_album_name"
...
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/timer_layout" >

        <Button
            android:id="@+id/new_album_track_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00AA00"
            android:text="@string/create_album" />

    </LinearLayout>
...
